finished fix window scaling
no overflowing elements anymore, also cleaned up unsued css and deleted unnessesary header

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -18,48 +18,11 @@ html, .app {
     background-color: rgba(239, 239, 239, 0.6);
 }
 
-.button {
-    background-color: #ffffff;
-    color: #000000;
-    border: none;
-    padding: 1em 1.5em;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 1.5em;
-    cursor: pointer;
-    transition-duration: 0.4s;
-    }
-
-.button1 {
-    background-color: #ffffff;
-    color: #000000;
-    border: 2px solid #ffffff;
-    }
-.button1:hover{
-    background-color: #000000;
-    color: #ffffff;
-    border: 2px solid #000000;
-}  
-
-  
-.center {
-    margin: 0;
-    position: absolute;
-    left: 50%;
-    top: 0.001%;
-    -ms-transform: translate(-50%,0.001%);
-    transform: translate(-50%,0.001%);
-
-}
-
-
-
 #MemoryBox {
     position: absolute;
     border: none;
-    margin-top: 6%;
-    height: 84%;
+    margin-top: 2.5%;
+    height: 88%;
     width: 65%;
     margin-left: 1%;
     padding: 10px;
@@ -70,13 +33,8 @@ html, .app {
     position: absolute;
     padding: 10px;
     border: none;
-    margin-top: 6%;
-    height: 84%;
+    margin-top: 2.5%;
+    height: 88%;
     width: 25%;
     margin-left: 73%;
-
-}
-
-.newBorder {
-    border: 0.5px solid #ffffff;
 }
